clusters/kubernetes-cluster-01/manifests/namespaces/istio-system/gateway/egress-zufardhiyaulhaq-dev-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: egress-zufardhiyaulhaq-dev-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-public-gateway
  servers:
  - hosts:
    - "egress.zufardhiyaulhaq.dev"
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - "egress.zufardhiyaulhaq.dev"
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: egress-zufardhiyaulhaq-dev-cert
      mode: SIMPLE
  - hosts:
    - "egress.zufardhiyaulhaq.dev"
    port:
      name: https-mtls
      number: 18443
      protocol: HTTPS
    tls:
      credentialName: egress-zufardhiyaulhaq-dev-cert
      mode: MUTUAL
