clusters/kubernetes-cluster-01/manifests/namespaces/istio-system/gateway/helloworld-grpc-zufardhiyaulhaq-dev-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: helloworld-grpc-zufardhiyaulhaq-dev-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-public-gateway
  servers:
  - hosts:
    - "helloworld-grpc.zufardhiyaulhaq.dev"
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - "helloworld-grpc.zufardhiyaulhaq.dev"
    port:
      name: https-default
      number: 443
      protocol: HTTPS
    tls:
      credentialName: helloworld-grpc-zufardhiyaulhaq-dev-cert
      mode: SIMPLE
