clusters/kubernetes-cluster-01/manifests/namespaces/istio-system/gateway/helloworld-zufardhiyaulhaq-dev-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: helloworld-zufardhiyaulhaq-dev-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-public-gateway
  servers:
  - hosts:
    - "helloworld.zufardhiyaulhaq.dev"
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - "helloworld.zufardhiyaulhaq.dev"
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: helloworld-zufardhiyaulhaq-dev-cert
      mode: SIMPLE
  - hosts:
    - "helloworld.zufardhiyaulhaq.dev"
    port:
      name: https
      number: 8443
      protocol: HTTPS
    tls:
      credentialName: helloworld-zufardhiyaulhaq-dev-cert
      mode: MUTUAL
      subjectAltNames:
      - 'client.mtls.zufardhiyaulhaq.dev'
