clusters/kubernetes-cluster-01/manifests/namespaces/istio-system/gateway/server-mtls-zufardhiyaulhaq-dev-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: server-mtls-zufardhiyaulhaq-dev-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-public-gateway
  servers:
  - hosts:
    - "server.mtls.zufardhiyaulhaq.dev"
    port:
      name: https-default
      number: 443
      protocol: HTTPS
    tls:
      credentialName: server-mtls-zufardhiyaulhaq-dev-cert
      mode: MUTUAL
      subjectAltNames:
      - 'client.mtls.zufardhiyaulhaq.dev'
      - 'helloworld.zufardhiyaulhaq.dev'
